--- a/Myerp/Tpl/default/Chanpin/header.html
+++ b/Myerp/Tpl/default/Chanpin/header.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/fonts.normal.css">
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/gaopeng.css">
 
+<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery-1.4.2.js" language="javascript"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1_yui.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/style.js"></script>
