--- a/Myerp/Tpl/default/Chanpin/left_fabu.html
+++ b/Myerp/Tpl/default/Chanpin/left_fabu.html
@@ -1,3 +1,7 @@
+        <style>
+		#navtab_2 h3 { color:#0B578F}
+		#navtab_3 h3 { color:#999}
+		</style>
 
   <div id="leftColumn" style="margin-top:7px; width:148px;">
         <ul id="searchTabs" class="tablist tablist_2">
@@ -41,9 +45,8 @@
             <li> <a href="#">&nbsp;<span>包团</span></a> </li>
           </ul>
         </div>
-        
-        <div id="navtab_2" class="leftList" style="display:none">
-          <h3 style=" text-align:center; border:none">报名中的产品</h3>
+        <div id="navtab_2" class="leftList" style="display:none;">
+          <h3 style=" text-align:center; border:none;">报名中的产品</h3>
           <h3><span>国内/拼团</span></h3>
           <ul id="ul_shortcuts">
             <li> <a href="#">&nbsp;<span>近郊游</span></a> </li>
@@ -78,7 +81,7 @@
           </ul>
         </div>
         
-        <div id="navtab_3" class="leftList" style="display:none">
+        <div id="navtab_3" class="leftList" style="display:none; color:black">
           <h3 style=" text-align:center; border:none">已截止的产品</h3>
           <h3><span>国内/拼团</span></h3>
           <ul id="ul_shortcuts">
