Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/default/Chanpin/header.html
+++ b/Myerp/Tpl/default/Chanpin/header.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>旅游ERP</title>
+
+<script src="<{:__PUBLIC__}>/myerp/jquery-1.4.2.js" language="javascript"></script>
+
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/style (2).css">
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/yui (2).css">
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/deprecated (2).css">
@@ -5,10 +13,13 @@
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/fonts.normal.css">
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/gaopeng.css">
 
-<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery-1.4.2.js" language="javascript"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1_yui.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/style.js"></script>
+
+</head>
+
+<body>
 
 <div id="header">
 
@@ -40,7 +51,7 @@
   <div id="moduleList">
     <ul>
       <li class="noBorder">&nbsp;</li>
-      <li> <span class="currentTabLeft">&nbsp;</span><span class="currentTab"> <a href="#" id="grouptab_0">&nbsp;旅游产品&nbsp;</a> </span><span class="currentTabRight">&nbsp;</span> </li>
+      <li> <span class="currentTabLeft">&nbsp;</span><span class="currentTab"> <a href="<{:SITE_INDEX}>Chanpin" id="grouptab_0">&nbsp;旅游产品&nbsp;</a> </span><span class="currentTabRight">&nbsp;</span> </li>
       <li> <span class="notCurrentTabLeft">&nbsp;</span><span class="notCurrentTab"> <a href="#" id="grouptab_1">&nbsp;财务管理&nbsp;</a> </span><span class="notCurrentTabRight">&nbsp;</span> </li>
       <li> <span class="notCurrentTabLeft">&nbsp;</span><span class="notCurrentTab"> <a href="#" id="grouptab_2">&nbsp;系统管理&nbsp;</a> </span><span class="notCurrentTabRight">&nbsp;</span> </li>
       <li> <span class="notCurrentTabLeft">&nbsp;</span><span class="notCurrentTab"> <a href="#" id="grouptab_3">&nbsp;销售&nbsp;</a> </span><span class="notCurrentTabRight">&nbsp;</span> </li>
@@ -51,7 +62,7 @@
   <div id="subModuleList"> 
   	<span id="moduleLink_0"  class="selected">
     <ul>
-      <li class="subTabMore"> <a href="#">发布产品&gt;&gt;</a> 
+      <li class="subTabMore"> <a href="<{:SITE_INDEX}>Chanpin">发布产品&gt;&gt;</a> 
           <ul class="cssmenu">
             <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/近郊/guojing/国内/xianlutype/散客产">国内近郊 </a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/长线/guojing/国内/xianlutype/散客产品">国内长线 </a> </li>
