--- a/Myerp/Tpl/default/Liandong/getVideos.html
+++ b/Myerp/Tpl/default/Liandong/getVideos.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1_yui.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/sugar_grp1.js"></script>
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/js/style.js"></script>
-<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery-1.4.2.js" language="javascript"></script>
+<script src="<{:__PUBLIC__}>/myerp/jquery-1.4.2.js" language="javascript"></script>
 <script>
 function confirmAct()
 {
