--- a/Myerp/Tpl/default/Chanpin/zituan.html
+++ b/Myerp/Tpl/default/Chanpin/zituan.html
@@ -101,7 +101,7 @@ function doComplete(data,status){
                   <{$v['tuanhao']}>
                   </td>
                   <td scope="row" align="left" valign="top">
-                  <{$v['baomingjiezhi']}>
+                  <{$v['zituan']['baomingjiezhi']}>
                   </td>
                   <td scope="row" align="left" valign="top">
                   <{$v['renshu']}>
