Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/default/Chanpin/index.html
+++ b/Myerp/Tpl/default/Chanpin/index.html
@@ -216,7 +216,7 @@
                   <input value="<{$v['xianluID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkbox">
                   </td>
                   <td scope="row" align="left" valign="top" style="min-width:300px;">
-                  <a href="<{:SITE_INDEX}>Chanpin/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a>
+                  <a href="<{:SITE_INDEX}>Chanpin/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['xianlu']['title']}></a>
                   </td>
                   <td scope="row" align="left" valign="top">
                   <{$v['xianlu']['bianhao']}>
