Signed-off-by: neconano <308715744@qq.com>

--- a/Myerp/Tpl/default/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/default/Chanpin/chengbenshoujia.html
@@ -169,7 +169,7 @@
                 </td>
                 <td scope="row" align="left" valign="top">
                 <input class="button" type="button" value="删除" onClick="deleteshoujia(<{$v['chanpinID']}>)" />
-                <input class="button" type="button" value="修改" onClick="addchengben(<{$v['chengbenID']}>)" />
+                <input class="button" type="button" value="修改" onClick="addshoujia(<{$v['chanpinID']}>)" />
                 </td>
               </tr>
               <php>}</php>
