Signed-off-by: neconano <308715744@qq.com>

--- a/Myerp/Tpl/default/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/default/Chanpin/header_chanpin.html
@@ -3,7 +3,7 @@
     var SITE_INDEX = '<{:SITE_INDEX}>';
     </script>
     <div class="moduleTitle" style="margin-bottom:10px;">
-      <h2 style="margin-top:10px;"><{$navigation}><{$datatitle}></h2>
+      <h3 style=""><{$navigation}><{$datatitle}></h3>
       <span style="margin-top:10px;"> 
       <img src="<{:__PUBLIC__}>/myerp/images/help.gif" alt="帮助"></a> <a href="javascript:void(0)" onclick="alert('暂无');" class="utilsLink"> 帮助 </a> 
       </span> 
