Signed-off-by: neconano <308715744@qq.com>

--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -4,9 +4,7 @@
 
 <div id="main">
 
-  <tp:includeCA file="Chanpin:left_fabu" />
-    
-  <div id="content" style="margin-left:170px;">
+  <div id="content" style="margin-left:5px; padding-left:0px; border-left:none">
   
     <include file="Chanpin:header_chanpin" />
     
