--- a/Myerp/Tpl/Chanpin/zituan.html
+++ b/Myerp/Tpl/Chanpin/zituan.html
@@ -4,7 +4,7 @@
 
   <div id="content" style="margin-left:5px; padding-left:0px; border-left:none">
   
-    <include file="Chanpin:header_chanpin" />
+    <tp:includeCA file="Chanpin:header_chanpin" />
     
 <form name="form" method="post" id="form">
   <input type="hidden" name="ajax" value="1"> <!--ajax提示-->
