--- a/Myerp/Tpl/SetSystem/DDindex.html
+++ b/Myerp/Tpl/SetSystem/DDindex.html
@@ -28,6 +28,10 @@
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/list.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/liandong">地区联动</a></td>
           <td width="30%">地区联动</td>
         </tr>
+        <tr>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_folder_drafts.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary/type/成本">成本</a></td>
+          <td width="30%">产品成本</td>
+        </tr>
       </tbody>
     </table>
     
