--- a/Myerp/Tpl/SetSystem/index.html
+++ b/Myerp/Tpl/SetSystem/index.html
@@ -79,7 +79,11 @@
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/sugar_icon.ico">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary">数据字典</a></td>
           <td width="30%">数据字典</td>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/WorkFlow.gif">&nbsp;<a target="_blank" href="<{:ET_URL}>rbac.php">RBAC设置</a></td>
-          <td width="30%">数据字典</td>
+          <td width="30%">角色权限这是</td>
+        </tr>
+        <tr>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/ProductTypes.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/department">部门设置</a></td>
+          <td width="30%">部门设置</td>
         </tr>
       </tbody>
     </table>
