Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/dingdanxinxi.html
+++ b/Myerp/Tpl/Chanpin/dingdanxinxi.html
@@ -302,6 +302,7 @@ function TravelerDetail(id)
           <td align="left" style="height: 32px"> 详细资料： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
+       <input type="hidden" name="tuanyuanID<{$i}>" value="<{$vo['id']}>" />
        <input type="hidden" name="datatext<{$i}>" value="<{$vo['datatext']}>" />
         <tr>
           <td align="left" style="height: 32px"><input type="text" name="name<{$i}>" value="<{$vo['name']}>" check="^\S+$" warning="所有人员姓名不能为空,且不能含有空格"></td>
