--- a/Myerp/Tpl/Chanpin/exports_2.html
+++ b/Myerp/Tpl/Chanpin/exports_2.html
@@ -547,7 +547,7 @@ mso-break-type:section-break'>
   mso-element-frame-hspace:9.0pt;mso-element-wrap:around;mso-element-anchor-vertical:
   paragraph;mso-element-anchor-horizontal:margin;mso-element-top:23.5pt;
   mso-height-rule:exactly'><span lang=EN-US style='font-size:9.0pt;font-family:
-  宋体'><o:p>&nbsp;</o:p></span></p>
+  宋体'><o:p><{$p_num}></o:p></span></p>
   </td>
   <td width=65 colspan=5 style='width:48.65pt;padding:0cm 2.85pt 0cm 2.85pt;
   height:19.85pt'>
