--- a/Myerp/Tpl/Chanpin/zituandingdan.html
+++ b/Myerp/Tpl/Chanpin/zituandingdan.html
@@ -51,7 +51,6 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 编号 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 团名 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 来源 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系电话 </div></th>
@@ -70,9 +69,8 @@
                 <tr style="cursor:pointer" height="30" class="evenListRowS1" onclick="showinfo(<{$v['chanpinID']}>)">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="left" valign="top" style=" color:#0B578F"><{$v['chanpinID']}></td>
-                  <td scope="row" align="left" valign="top" style="min-width:200px; width:20%;"><{$v['title']}></td>
-                  <td scope="row" align="left" valign="top" style="min-width:100px;"><{$v['bumen_copy']}>-<{$v['user_name']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['lianxiren']}></td>
+                  <td scope="row" align="left" valign="top" style="min-width:150px;"><{$v['bumen_copy']}>-<{$v['user_name']}></td>
+                  <td scope="row" align="left" valign="top" style="min-width:60px;"><{$v['lianxiren']}></td>
                   <td scope="row" align="left" valign="top"><{$v['telnum']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}></td>
                   <td scope="row" align="left" valign="top"><{$v['ertongshu']}></td>
@@ -81,8 +79,8 @@
                   <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}></td>
                   <td scope="row" align="left" valign="top"><{$v['owner']}></td>
                   <td scope="row" align="left" valign="top"><{$v['type']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['status']}></td>
-                  <td scope="row" align="left" valign="top"><php>echo date('m/d H:i',$v['time'])</php></td>
+                  <td scope="row" align="left" valign="top" style="min-width:40px;"><{$v['status']}></td>
+                  <td scope="row" align="left" valign="top" style="min-width:80px;"><php>echo date('m/d H:i',$v['time'])</php></td>
                 </tr>
                 <php> }</php>
                 
