Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/jiedaijihua.html
+++ b/Myerp/Tpl/Chanpin/jiedaijihua.html
@@ -44,17 +44,17 @@ function dofabu(chanpinID){
           <td valign="top" scope="row" style="min-width:100px;"> 致: </td>
           <td valign="top" scope="row" style="min-width:200px;"><input name="toperson" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="totelnum" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="totelnum" type="text" value="<{$zituan['jiedaijihua']['totelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="tofax" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="tofax" type="text" value="<{$zituan['jiedaijihua']['tofax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
         </tr>
         <tr>
           <td valign="top" scope="row" style="min-width:100px;"> 发件人: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formperson" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="formperson" type="text" value="<{$zituan['jiedaijihua']['formperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formtelnum" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="formtelnum" type="text" value="<{$zituan['jiedaijihua']['formtelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formfax" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="formfax" type="text" value="<{$zituan['jiedaijihua']['formfax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
         </tr>
       </tbody>
     </table>
@@ -62,7 +62,7 @@ function dofabu(chanpinID){
       <tbody>
         <tr>
           <td valign="top" scope="row" style="min-width:100px;"> 去程交通: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="tojiaotong" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          <td valign="top" scope="row" style="min-width:200px;"><input name="tojiaotong" type="text" value="<{$zituan['jiedaijihua']['tojiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 返程交通: </td>
           <td valign="top" scope="row" style="min-width:200px;"><input name="formjiaotong" type="text" value="<{$zituan['jiedaijihua']['formjiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
           <td valign="top" scope="row" style="min-width:100px;"> 集合标志: </td>
