Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/SetSystem/OMindex.html
+++ b/Myerp/Tpl/SetSystem/OMindex.html
@@ -22,6 +22,10 @@
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_Activities.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/systemOM/datatype/分类">分类数据</a></td>
           <td width="30%">管理产品等数据的开放对象和管理对象</td>
         </tr>
+        <tr>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_email_mark.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/systemOM/datatype/报账单">报账单</a></td>
+          <td width="30%">报账单的开放与管理</td>
+        </tr>
       </tbody>
     </table>
     
