--- a/Myerp/Tpl/Chanpin/jiedaijihua.html
+++ b/Myerp/Tpl/Chanpin/jiedaijihua.html
@@ -22,76 +22,75 @@ function dofabu(chanpinID){
 	});
 }
 
+function exports(chanpinID){
+	window.location.href = '<{:SITE_INDEX}>Chanpin/zituanxinxi/typemark/接待计划/export/1/chanpinID/'+chanpinID;
+}
 </script>
-
-
 <link href="<{:__PUBLIC__}>/gulianstyle/styles/WdatePicker.css" rel="stylesheet" type="text/css">
 <div id="main"> <include file="Chanpin:left_kongguan" />
   <div id="content" style="margin-left:170px;">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
     <tp:includeCA file="Chanpin:header_kongguan" />
-    
     <form name="form1" method="post" id="form1" >
-    <input type="hidden" name="chanpinID" value="<{$zituan[chanpinID]}>">
-    <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
-      <tbody>
-        <tr>
-          <th align="left" colspan="8"> <h4>接待计划（该计划将发布给产品的开放用户）</h4>
-          </th>
-        </tr>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 致: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="toperson" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="totelnum" type="text" value="<{$zituan['jiedaijihua']['totelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="tofax" type="text" value="<{$zituan['jiedaijihua']['tofax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 发件人: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formperson" type="text" value="<{$zituan['jiedaijihua']['formperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formtelnum" type="text" value="<{$zituan['jiedaijihua']['formtelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formfax" type="text" value="<{$zituan['jiedaijihua']['formfax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-      </tbody>
-    </table>
-    <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
-      <tbody>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 去程交通: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="tojiaotong" type="text" value="<{$zituan['jiedaijihua']['tojiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 返程交通: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="formjiaotong" type="text" value="<{$zituan['jiedaijihua']['formjiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 集合标志: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="jihemark" type="text" value="<{$zituan['jiedaijihua']['jihemark']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 领队: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="lingdui" type="text" value="<{$zituan['jiedaijihua']['lingdui']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 领队电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="lingduitelnum" type="text" value="<{$zituan['jiedaijihua']['lingduitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 接团标志: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="jietuanmark" type="text" value="<{$zituan['jiedaijihua']['jietuanmark']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 地陪: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="dipei" type="text" value="<{$zituan['jiedaijihua']['dipei']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 地陪电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="dipeitelnum" type="text" value="<{$zituan['jiedaijihua']['dipeitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-        <tr>
-          <td valign="top" scope="row" style="min-width:100px;"> 紧急联系人: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="jinjilianxiren" type="text" value="<{$zituan['jiedaijihua']['jinjilianxiren']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-          <td valign="top" scope="row" style="min-width:100px;"> 紧急联系人电话: </td>
-          <td valign="top" scope="row" style="min-width:200px;"><input name="jinjitelnum" type="text" value="<{$zituan['jiedaijihua']['jinjitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
-        </tr>
-      </tbody>
-    </table>
+      <input type="hidden" name="chanpinID" value="<{$zituan[chanpinID]}>">
+      <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
+        <tbody>
+          <tr>
+            <th align="left" colspan="8"> <h4>接待计划（该计划将发布给产品的开放用户）</h4>
+            </th>
+          </tr>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 致: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="toperson" type="text" value="<{$zituan['jiedaijihua']['toperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="totelnum" type="text" value="<{$zituan['jiedaijihua']['totelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="tofax" type="text" value="<{$zituan['jiedaijihua']['tofax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 发件人: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="fromperson" type="text" value="<{$zituan['jiedaijihua']['fromperson']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="fromtelnum" type="text" value="<{$zituan['jiedaijihua']['fromtelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 传真: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="fromfax" type="text" value="<{$zituan['jiedaijihua']['fromfax']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+        </tbody>
+      </table>
+      <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
+        <tbody>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 去程交通: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="tojiaotong" type="text" value="<{$zituan['jiedaijihua']['tojiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 返程交通: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="backjiaotong" type="text" value="<{$zituan['jiedaijihua']['backjiaotong']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 集合标志: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="jihemark" type="text" value="<{$zituan['jiedaijihua']['jihemark']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 领队: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="lingdui" type="text" value="<{$zituan['jiedaijihua']['lingdui']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 领队电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="lingduitelnum" type="text" value="<{$zituan['jiedaijihua']['lingduitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 接团标志: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="jietuanmark" type="text" value="<{$zituan['jiedaijihua']['jietuanmark']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 地陪: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="dipei" type="text" value="<{$zituan['jiedaijihua']['dipei']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 地陪电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="dipeitelnum" type="text" value="<{$zituan['jiedaijihua']['dipeitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+          <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 紧急联系人: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="jinjilianxiren" type="text" value="<{$zituan['jiedaijihua']['jinjilianxiren']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 紧急联系人电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="jinjitelnum" type="text" value="<{$zituan['jiedaijihua']['jinjitelnum']}>" check="^\S+$" warning="所有信息必填,没有请写无,且不能含有空格" ></td>
+          </tr>
+        </tbody>
+      </table>
     </form>
-    
   </div>
 </div>
 <tp:includeCA file="Index:footer" />
